--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -1,140 +1,141 @@
 .quest {
-width: 100%;
-height: 100%;
-position: relative;
-overflow: scroll;
-background: linear-gradient(to bottom, var(-gray), var(--black));
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: scroll;
+  background: linear-gradient(to bottom, var(-gray), var(--black));
 }
 .quest__video {
-width: 100%;
-height: 100%;
-position: absolute;
-top: 0;
-left: 0;
-z-index: 1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 .quest__video video {
-object-fit: cover;
-width: 100%;
-height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .muteButton {
-width: 3rem;
-height: 3rem;
-position: absolute;
-display: grid;
-place-items: center;
-background: var(--white-15);
-box-shadow: 0 0.5rem 1rem var(--black-15);
-backdrop-filter: blur(10px);
-right: 2rem;
-bottom: var(--footer);
-margin-bottom: 3rem;
-border-radius: 99px;
-z-index: 2;
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  display: grid;
+  place-items: center;
+  background: var(--white-15);
+  box-shadow: 0 0.5rem 1rem var(--black-15);
+  backdrop-filter: blur(10px);
+  right: 2rem;
+  bottom: var(--footer);
+  margin-bottom: 3rem;
+  border-radius: 99px;
+  z-index: 2;
 }
 @keyframes muteBtnAnim {
-0 {
-transform: scale(1);
-}
-10% {
-transform: scale(1.1);
-}
-20% {
-transform: scale(1);
-}
-30% {
-transform: scale(1.1);
-}
-40%, 100% {
-transform: scale(1);
-}
+  0 {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(1.1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(1.1);
+  }
+  40%,
+  100% {
+    transform: scale(1);
+  }
 }
 
 .muteButton svg {
-font-size: 1.75rem;
-margin: 0;
-animation: muteBtnAnim 2s infinite ease-out;
+  font-size: 1.75rem;
+  margin: 0;
+  animation: muteBtnAnim 2s infinite ease-out;
 }
 .quest__box {
-position: absolute;
-max-width: 640px;
-width: 75%;
-padding: 1.5rem;
-background: var(--white-15);
-box-shadow: 0 1rem 1rem var(--black-15);
-backdrop-filter: blur(10px);
-left: 3rem;
-bottom: var(--footer);
-margin-bottom: 3rem;
-border-radius: 0.5rem;
-z-index: 2;
+  position: absolute;
+  max-width: 640px;
+  width: 75%;
+  padding: 1.5rem;
+  background: var(--white-15);
+  box-shadow: 0 1rem 1rem var(--black-15);
+  backdrop-filter: blur(10px);
+  left: 3rem;
+  bottom: var(--footer);
+  margin-bottom: 3rem;
+  border-radius: 0.5rem;
+  z-index: 2;
 }
 .quest__box img.completed {
-position: absolute;
-right: -1rem;
-top: -1rem;
-width: 4rem;
-height: auto;
-filter: drop-shadow(0 0.5rem 1rem var(--black-15));
+  position: absolute;
+  right: -1rem;
+  top: -1rem;
+  width: 4rem;
+  height: auto;
+  filter: drop-shadow(0 0.5rem 1rem var(--black-15));
 }
 .quest__hint {
-padding: 0.5rem 1rem 0.5rem 0.75rem;
-background: var(--white-15);
-border-radius: 0.5rem;
-box-shadow: 0 0.25rem 0.5rem var(--black-15);
-margin-top: 1rem;
-width: fit-content;
-display: flex;
-align-items: center;
-user-select: none;
+  padding: 0.5rem 1rem 0.5rem 0.75rem;
+  background: var(--white-15);
+  border-radius: 0.5rem;
+  box-shadow: 0 0.25rem 0.5rem var(--black-15);
+  margin-top: 1rem;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  user-select: none;
 }
 .quest__hint.accuracy {
-padding: 0.5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 .quest__hint.accuracy b {
-padding-right: 0.75rem;
+  padding-right: 0.75rem;
 }
 .quest__hint img {
-height: 2rem;
-width: auto;
-margin-right: 0.75rem;
-transform: scaleY(0.85);
+  height: 2rem;
+  width: auto;
+  margin-right: 0.75rem;
+  transform: scaleY(0.85);
 }
 .quest__question {
-font-weight: 600;
-font-size: 1.15rem;
-user-select: none;
+  font-weight: 600;
+  font-size: 1.15rem;
+  user-select: none;
 }
 .quest__answer {
-display: flex;
-flex-flow: column;
-margin-top: 1.5rem;
+  display: flex;
+  flex-flow: column;
+  margin-top: 1.5rem;
 }
 .quest__answer input {
-margin-bottom: 1rem;
-max-width: auto;
-max-width: none;
+  margin-bottom: 1rem;
+  max-width: auto;
+  max-width: none;
 }
 
 .quest__locked {
-position: absolute;
-display: grid;
-place-items: center;
-content: '';
-z-index: 2;
-color: var(--white);
-width: 100%;
-height: 100%;
-left: 0;
-top: 0;
-background: var(--black-15);
-backdrop-filter: blur(0.5rem);
-box-shadow: inset 0 2rem 5rem var(--black);
+  position: absolute;
+  display: grid;
+  place-items: center;
+  content: "";
+  z-index: 2;
+  color: var(--white);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: var(--black-15);
+  backdrop-filter: blur(0.5rem);
+  box-shadow: inset 0 2rem 5rem var(--black);
 }
 .quest__locked img {
-width: 50%;
-height: auto;
-max-width: 400px;
-opacity: 0.75;
+  width: 50%;
+  height: auto;
+  max-width: 400px;
+  opacity: 0.75;
 }
