--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;600;700;800;900&display=swap");
 
-*, *::before, *::after {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
---green: #1DB954;
---gray: #2e2e2e;
---black: #101010;
---white: #fff;
---green-50: rgba(30,210,84,0.5);
---black-15: rgba(0,0,0,0.15);
---black-05: rgba(0,0,0,0.05);
---black-50: rgba(0,0,0,0.5);
---white-15: rgba(255,255,255,0.15);
---white-50: rgba(255,255,255,0.5);
---white-05: rgba(255,255,255,0.05);
---footer: clamp(80px, 10vh, 100px);
---gold: #ffd700;
---silver: #bec2cb;
---bronze: #a97142;
+  --green: #1db954;
+  --gray: #2e2e2e;
+  --black: #101010;
+  --white: #fff;
+  --green-50: rgba(30, 210, 84, 0.5);
+  --black-15: rgba(0, 0, 0, 0.15);
+  --black-05: rgba(0, 0, 0, 0.05);
+  --black-50: rgba(0, 0, 0, 0.5);
+  --white-15: rgba(255, 255, 255, 0.15);
+  --white-50: rgba(255, 255, 255, 0.5);
+  --white-05: rgba(255, 255, 255, 0.05);
+  --footer: clamp(80px, 10vh, 100px);
+  --gold: #ffd700;
+  --silver: #bec2cb;
+  --bronze: #a97142;
 }
 
-*, html {
-  -ms-overflow-style: none;
+*,
+html {
+  -ms-overflow-style: none;
   scrollbar-width: none;
 }
 
